--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -52,7 +52,7 @@
     <!-- Template Stylesheet -->
     <!-- <link href="css/style.css" rel="stylesheet"/> -->
    
-    <title>React App</title>
+    <title>E-Store</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
